fix: skip-to-content overlaping

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -118,7 +118,7 @@ ul#main-nav {
 .skip-to-content:focus {
   position: relative;
   transform: translateY(0);
-  top: 6rem;
+  top: 7rem;
 }
 
 .main-content {
